# flext-target-ldap

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.local.md  CLAUDE.md  LOGGING_MIGRATION.md  Makefile  README.md  base.mk  conftest.py  custom.mk  custom.mk.rej  docker-compose.yml  history  history.json  mkdocs.yml  pyproject.toml  {}
.flext-deps/: flext-ldap
.github/workflows/: ci.yml
.scope/: config.toml
.serena/: project.yml
api-reference/: README.md
config/: target_ldap.yaml
docs/: README.md  index.md
docs/api-reference/: README.md
docs/guides/: README.md  configuration.md  development.md  getting-started.md  security.md  skill-automation-pattern.md  testing.md  troubleshooting.md
examples/: README.md
guides/: configuration.md  development.md  getting-started.md  security.md  testing.md  troubleshooting.md
src/: README.md  flext_meltano.pyi
src/flext_target_ldap/: __init__.py  __init__.pyi  __version__.py  _config.py  _exports.py  _exports_lazy_part_01.py  _settings.py  api.py  catalog.py  client.py  config.py  constants.py  errors.py  exceptions.py  models.py  processing_result.py  protocols.py  settings.py  simple_api.py  sinks.py  target.py  target_client.py  target_config.py  target_exceptions.py  target_models.py  target_services.py  transformation.py  typings.py  utilities.py  version.py
src/flext_target_ldap/_constants/: __init__.py  base.py
src/flext_target_ldap/_models/: __init__.py  config.py  processing_result.py  sinks.py
src/flext_target_ldap/_utilities/: __init__.py  api_service.py  client.py  config.py  service_runtime.py  services.py  settings.py  target.py  transformation.py
src/flext_target_ldap/application/: __init__.py  orchestrator.py
src/flext_target_ldap/config/: target-ldap.yaml
src/flext_target_ldap/connection/: __init__.py  config.py  connection.py
src/flext_target_ldap/infrastructure/: __init__.py  di_container.py
src/flext_target_ldap/patterns/: __init__.py  ldap_patterns.py
src/flext_target_ldap/singer/: __init__.py  catalog.py  stream.py  target.py
src/target_ldap/: __init__.py  __version__.py  client.py  sinks.py  target.py  transformation.py
tests/: README.md  __init__.py  base.py  conftest.py  conftest_project.py  constants.py  models.py  protocols.py  settings.py  test_client.py  test_integration.py  test_sinks.py  test_target.py  test_transformation.py  tm.py  tp.py  tt.py  tu.py  typings.py  utilities.py
tests/e2e/: __init__.py  conftest.py  test_target_e2e.py
tests/e2e/ldif/source/: 01-base.ldif
tests/fixtures/: __init__.py
tests/unit/: __init__.py  test_client.py  test_integration.py  test_sinks.py  test_target.py  test_transformation.py
