[project]
    name        = "flext-target-ldap"
    version     = "2.1.0"
    description = "FLEXT Target for LDAP directory loading"
    readme      = "README.md"
    license     = "MIT"

    requires-python = ">=3.13,<3.14"

    authors = [
        { name = "Marlon Santa Cruz", email = "marlon@example.com" }
    ]

    keywords = [
        "flext",
        "singer",
        "target",
        "ldap",
        "etl",
        "data-integration"
    ]

    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.13",
        "Topic :: Database",
        "Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP",
        "Typing :: Typed"
    ]

    [project.urls]
        Homepage      = "https://github.com/algartech/flext"
        Documentation = "https://github.com/algartech/flext#readme"
        Repository    = "https://github.com/algartech/flext"

[build-system]
    build-backend = "poetry.core.masonry.api"
    requires      = ["poetry-core>=2.0.0"]

[tool.poetry]
    name        = "flext-target-ldap"
    version     = "2.1.0"
    description = "FLEXT Target for LDAP directory loading"
    authors     = ["Marlon Santa Cruz <marlon@example.com>"]
    readme      = "README.md"
    license     = "MIT"

    packages = [
        { include = "flext_target_ldap", from = "src" }
    ]

    [tool.poetry.dependencies]
        python = ">=3.13,<3.14"
        flext-core = { path = "../flext-core", develop = true }
        flext-ldap = { path = "../flext-ldap", develop = true }
        flext-meltano = { path = "../flext-meltano", develop = true }
        flext-observability = { path = "../flext-observability", develop = true }

    [tool.poetry.group.dev.dependencies]
        pytest       = "^9.0.2"
        pytest-cov   = "^7.0.0"
        pytest-mock  = ">=3.0"
        ruff         = ">=0.12.3"
        pyrefly      = "^0.46.3"
        bandit       = ">=1.7"
    opentelemetry-api = ">=1.39.1"
    opentelemetry-sdk = ">=1.39.1"
    prompt-toolkit = ">=3.0.52"
    sqlparse = ">=0.5.5"

[tool.deptry]
    known_first_party = [
        "flext_target_ldap",
        "flext_core",
        "flext_ldap",
        "flext_meltano",
        "flext_observability",
    ]
    pep621_dev_dependency_groups = [
        "dev",
        "test",
        "typings",
        "security",
    ]

[tool.deptry.per_rule_ignores]
    DEP002 = [
        # CLI tools (invoked from command line, not imported)
        "bandit",
        "pyrefly",
        "ruff",
        # Runtime deps used indirectly (via pydantic, pytest)
        "pytest",
        "pytest-cov",
        "pytest-mock",
    ]

[tool.ruff]
    line-length    = 88
    target-version = "py313"

    [tool.ruff.lint]
        select = [
            "E",    # pycodestyle errors
            "W",    # pycodestyle warnings
            "F",    # pyflakes
            "I",    # isort
            "B",    # flake8-bugbear
            "C4",   # flake8-comprehensions
            "UP",   # pyupgrade
            "ARG",  # flake8-unused-arguments
            "SIM",  # flake8-simplify
        ]
        ignore = [
            "E501",   # line too long (handled by formatter)
            "B008",   # function calls in defaults
            "ARG001", # unused function argument
        ]

        [tool.ruff.lint.isort]
            known-first-party = ["flext_target_ldap"]

[tool.pyrefly]
    project_includes = ["src"]
    python_version   = "3.13"
    strict           = true

[tool.pytest.ini_options]
    testpaths = ["tests"]
    markers   = [
        "unit: Unit tests",
        "integration: Integration tests"
    ]
    addopts = "-v --tb=short"

[tool.coverage.run]
    source = ["src/flext_target_ldap"]
    branch = true

    [tool.coverage.report]
        exclude_lines = [
            "pragma: no cover",
            "if TYPE_CHECKING:",
            "raise NotImplementedError"
        ]
