[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core>=2" ]

[project]
name = "flext-target-ldap"
version = "0.10.0-dev"
description = "FLEXT Target for LDAP directory loading"
readme = "README.md"
keywords = [ "data-integration", "etl", "flext", "ldap", "singer", "target" ]
license = "MIT"
authors = [ { name = "Marlon Santa Cruz", email = "marlon@example.com" } ]
requires-python = ">=3.13,<3.14"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP",
  "Typing :: Typed",
]
dependencies = []
urls.Documentation = "https://github.com/algartech/flext#readme"
urls.Homepage = "https://github.com/algartech/flext"
urls.Repository = "https://github.com/algartech/flext"

[tool.poetry]
packages = [ { include = "flext_target_ldap", from = "src" } ]
dependencies.python = ">=3.13,<3.14"
dependencies.flext-core = { path = "../flext-core", develop = true }
dependencies.flext-ldap = { path = "../flext-ldap", develop = true }
dependencies.flext-meltano = { path = "../flext-meltano", develop = true }
dependencies.flext-observability = { path = "../flext-observability", develop = true }
group.dev.dependencies.pytest = "^9.0.2"
group.dev.dependencies.pytest-cov = "^7.0.0"
group.dev.dependencies.pytest-mock = ">=3.0"
group.dev.dependencies.ruff = ">=0.12.3"
group.dev.dependencies.pyrefly = "^0.46.3"
group.dev.dependencies.bandit = ">=1.7"
group.dev.dependencies.opentelemetry-api = ">=1.39.1"
group.dev.dependencies.opentelemetry-sdk = ">=1.39.1"
group.dev.dependencies.prompt-toolkit = ">=3.0.52"
group.dev.dependencies.sqlparse = ">=0.5.5"

[tool.ruff]
extend = "../ruff-shared.toml"
lint.isort.known-first-party = [ "flext_target_ldap" ]

[tool.deptry]
known_first_party = [
  "flext_target_ldap",
  "flext_core",
  "flext_ldap",
  "flext_meltano",
  "flext_observability",
]
pep621_dev_dependency_groups = [
  "dev",
  "test",
  "typings",
  "security",
]
per_rule_ignores.DEP002 = [
  # CLI tools (invoked from command line, not imported)
  "bandit",
  "pyrefly",
  "ruff",
  # Runtime deps used indirectly (via pydantic, pytest)
  "pytest",
  "pytest-cov",
  "pytest-mock",
]

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.markers = [ "unit: Unit tests", "integration: Integration tests" ]
ini_options.addopts = "-v --tb=short"

[tool.coverage]
run.source = [ "src/flext_target_ldap" ]
report.exclude_lines = [ "if TYPE_CHECKING:", "pragma: no cover", "raise NotImplementedError" ]
report.fail_under = 100

[tool.pyrefly]
project_includes = [ "src" ]
python_version = "3.13"
strict = true
search-path = [
  "../typings",
  "../typings/generated",
  "src",
  "tests",
]

[tool.bandit]
skips = [ "B404", "B603", "B607", "B105", "B608" ]
