[project]
    name        = "flext-target-ldap"
    version     = "0.10.0-dev"
    description = "FLEXT Target for LDAP directory loading"
    readme      = "README.md"
    requires-python = ">=3.13,<3.14"

    authors = [
        { name = "Marlon Santa Cruz", email = "marlon@example.com" }
    ]

    keywords = [
        "flext",
        "singer",
        "target",
        "ldap",
        "etl",
        "data-integration"
    ]

    classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP",
    "Typing :: Typed"
    ]

    [project.urls]
        Homepage      = "https://github.com/flexttech/flext"
        Documentation = "https://github.com/flexttech/flext#readme"
        Repository    = "https://github.com/flexttech/flext"

[build-system]
    build-backend = "poetry.core.masonry.api"
    requires      = ["poetry-core>=2.0.0"]

[tool.poetry]

    packages = [
        { include = "flext_target_ldap", from = "src" }
    ]

    [tool.poetry.dependencies]
        python = ">=3.13,<3.14"
        flext-core = { path = "../flext-core", develop = true }
        flext-ldap = { path = "../flext-ldap", develop = true }
        flext-meltano = { path = "../flext-meltano", develop = true }
        flext-observability = { path = "../flext-observability", develop = true }

    [tool.poetry.group.dev.dependencies]
        pytest       = "^9.0.2"
        pytest-cov   = "^7.0.0"
        pytest-mock  = ">=3.0"
        ruff         = ">=0.12.3"
        pyrefly      = "^0.46.3"
        bandit       = ">=1.7"
    opentelemetry-api = ">=1.39.1"
    opentelemetry-sdk = ">=1.39.1"
    prompt-toolkit = ">=3.0.52"
    sqlparse = ">=0.5.5"

[tool.deptry]
    known_first_party = [
        "flext_target_ldap",
        "flext_core",
        "flext_ldap",
        "flext_meltano",
        "flext_observability",
    ]
    pep621_dev_dependency_groups = [
        "dev",
        "test",
        "typings",
        "security",
    ]

[tool.deptry.per_rule_ignores]
    DEP002 = [
        # CLI tools (invoked from command line, not imported)
        "bandit",
        "pyrefly",
        "ruff",
        # Runtime deps used indirectly (via pydantic, pytest)
        "pytest",
        "pytest-cov",
        "pytest-mock",
    ]

[tool.ruff]
extend = "../ruff-shared.toml"

[tool.ruff.lint.isort]
            known-first-party = ["flext_target_ldap"]
[tool.pyrefly]
    project_includes = ["src"]
    python_version   = "3.13"
    strict           = true

[tool.pytest.ini_options]
    testpaths = ["tests"]
    markers   = [
        "unit: Unit tests",
        "integration: Integration tests"
    ]
    addopts = "-v --tb=short"

[tool.coverage.run]
    source = ["src/flext_target_ldap"]
    branch = true

    [tool.coverage.report]
        exclude_lines = [
            "pragma: no cover",
            "if TYPE_CHECKING:",
            "raise NotImplementedError"
        ]
    fail_under = 100

[tool.bandit]
skips = ["B404", "B603", "B607", "B105", "B608"]
